# signon-kwallet-extension

./: .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt
cmake/modules/: FindSignOnExtension.cmake
src/: CMakeLists.txt  keyringplugin.cpp  keyringplugin.h  secretsstorage.cpp  secretsstorage.h
tests/: CMakeLists.txt  testextension.cpp
